fix page title spacing, contact page spacing

--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -1,9 +1,6 @@
-.contact-details {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: space-around;
-  height: 65vh;
+.contact-details p,
+.contact-details h3 {
+  margin-block-end: 2em;
 }
 
 .email-link {
