--- a/src/pages/portfolio/index.module.css
+++ b/src/pages/portfolio/index.module.css
@@ -9,7 +9,6 @@
 
 
 .project-buttons-container {
-  padding: 50px 0px;
   display: flex;
   justify-content: space-around;
   align-items: center;
